@@ -1,6 +1,7 @@
 Kiwix 0.9 beta1
 * Fix the encoding issue in the help in Parsi (ID: 3060250)
 * Fix an URL parsing issue impacting title containing a '/' (ID: 3065286)
+* Add mouse thumb buttons back/forward support (ID: 3063304)
 
 Kiwix 0.9 alpha6
 * Fix a regression bug impacting the case insensitive (first character only) suggestion system
